--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
     android:textColor="#00FF00"
     android:background="@android:color/black"
-    android:textSize="16sp" />
+    android:textSize="16sp"
+    android:padding="10dp"
+    android:fontFamily="monospace" />
